# ShieldAgent-IEEE-CONECCT-2026

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARTIFACT.md  Dockerfile  LICENSE  README.md  REPRODUCE.md  pyproject.toml
configs/: .gitignore  attack_patterns.yaml  default.yaml
data/: .gitignore  README.md
data/samples/attacks/: prompt_injection_sample.json  tool_chain_sample.json
data/samples/benign/: file_read_sample.json
models/: README.md  shieldagent_gnn.pt
scripts/: generate_attacks.py  import_agentdojo.py  import_shieldlm.py  run_adaptive_stress.py  run_experiments.py  run_protectai_baseline.py  verify_local.py
src/: .gitignore
src/shieldagent/: __init__.py  cli.py
src/shieldagent/core/: __init__.py  agent.py  config.py  types.py
src/shieldagent/defense/: __init__.py  anomaly.py  intent.py  sandbox.py  sanitizer.py
src/shieldagent/evaluation/: __init__.py  benchmark.py  metrics.py
src/shieldagent/llm/: __init__.py  base.py  cerebras.py  google_ai.py  openrouter.py
src/shieldagent/mcp/: __init__.py  client.py  server.py  types.py
tests/: test_agent.py  test_anomaly.py  test_intent.py  test_llm.py  test_sandbox.py  test_sanitizer.py
