[project]
name = "shieldagent"
version = "0.1.0"
description = "Defense-in-Depth Security Framework for Agentic AI Tool Use"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GNU General Public License v3.0" }
authors = [
    { name = "Kingshuk Mondal", email = "kingshukxresearch@protonmail.com" }
]
keywords = [
    "ai-security",
    "llm",
    "agentic-ai",
    "mcp",
    "defense",
    "machine-learning",
    "gnn",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3.0 License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.0.0",
    "torchvision>=0.15.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "mcp>=1.26.0",
    "google-genai>=1.61.0",
    "cerebras-cloud-sdk>=1.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]
paper = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

[project.scripts]
shieldagent = "shieldagent.cli:app"
sa-generate = "shieldagent.cli:app"
sa-benchmark = "shieldagent.cli:app"

[project.urls]
Homepage = "https://github.com/ImKKingshuk/ShieldAgent-IEEE-CONECCT-2026"
Documentation = "https://github.com/ImKKingshuk/ShieldAgent-IEEE-CONECCT-2026#readme"
Repository = "https://github.com/ImKKingshuk/ShieldAgent-IEEE-CONECCT-2026.git"
Issues = "https://github.com/ImKKingshuk/ShieldAgent-IEEE-CONECCT-2026/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shieldagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ["py312"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
]
